# g2opy

./: CMakeLists.txt
g2o/examples/: CMakeLists.txt
g2o/examples/camrig/: camrig_demo.cpp
g2o/examples/tests/: CMakeLists.txt  test.cpp
g2o/types/icp/: types_icp.h
python/examples/: camrig_demo.py
python/types/icp/: types_icp.h
